--- a/Stuttering App/Info.plist
+++ b/Stuttering App/Info.plist
@@ -16,7 +16,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>TapDailyTask</string>
+					<string>awardsStoryboard</string>
 				</dict>
 			</array>
 		</dict>
